prusti/tests/parse/ui/pure.stderr
Verification of 10 items...
error: [Prusti: verification error] statement might panic
  --> $DIR/pure.rs:38:5
   |
38 |     assert!(z == 5);
   |     ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/pure.rs:45:9
   |
45 |         result == 3     // test that we get correct span information
   |         ^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/pure.rs:53:1
   |
53 | / fn test_max3() -> i32 {
54 | |     let a = 4;
55 | |     let b = 3;
56 | |     max(a, b)
57 | | }
   | |_^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/pure.rs:66:11
   |
66 | #[ensures(result == max(a, b))]
   |           ^^^^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/pure.rs:66:1
   |
66 | #[ensures(result == max(a, b))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Verification failed
error: aborting due to 3 previous errors

